--- a/clients/templates/clients.html
+++ b/clients/templates/clients.html
@@ -1,7 +1,7 @@
 <body class="clients">
     {% extends 'base.html' %}
     {% block page %}
-        {% for client in clients %}
+        {% for client in object_list %}
             <table class="table table-dark table-striped">
             <thead>
                 <tr>
