--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,27 +1,38 @@
 <!DOCTYPE html>
 {% load static %}
+
 <html>
 <head>
    <title>Сайт воды</title>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'main.css' %}">
     <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="icon" sizes="192x192" href="{% static 'SK_logo.svg.png' %}">
 </head>
 <body class="block">
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-navy border-bottom">
         <h3 class="my-0 mr-md-auto font-weight-normal">Sk company</h3>
-          <nav class="my-2 my-md-0 mr-md-3">
+        {% if user.is_authenticated %}
+<!--            #my-0 - ширина верхнего контейнера mr-md-4 - длина между слов-->
+            <h3 class="my-0 mr-md-4 font-weight-normal" style="color: darkblue">{{request.user}}</h3>
+            <nav class="my-2 my-md-0 mr-md-3">
+            <a class="p-2 text-black" href="{% url 'logout' %}">Выход</a>
             <a class="p-2 text-black" href="/contacts/">Контакты</a>
             <a class="p-2 text-black" href="/about/">О нас</a>
             <a class="p-2 text-black" href="{% url 'create-order' %}">Заказать</a>
-          </nav>
+         {% else %}
+            <a href="{% url 'register' %}"><button type="button" name="show_more">Регистрация</button></a>
+            <a class="p-2 text-black" href="{% url 'login' %}"><button class="btn btn-info">Войти</button></a>
+            </nav>
+        {% endif %}
     </div>
         <nav class="navbar fixed-bottom navbar-expand-sm navbar-black bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/about/">О нас</a>
+                <a class="navbar-brand" href="{% url 'makers-list' %}">Главное</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -32,6 +43,9 @@
                         </li>
                         <li class="nav-item">
                         <a class="nav-link" href="{% url 'order-list' %}">Заказы</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="/about/">O нас</a>
                         </li>
                         <li class="nav-item">
                         <a class="nav-link active" aria-current="page">Режим работы: Круглосуточно</a>
