--- a/core/templates/bottle_info.html
+++ b/core/templates/bottle_info.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block page %}
     <h1>Инфо напитков</h1>
-    <div>Объем: {{bottle.volume}}</div>
-    <div>Адрес: {{bottle.maker}}</div>
-    <div>Описание: {{bottle.description}}</div>
-    <div>Expired: {{bottle.expired}}</div>
+    <div>Объем: {{object.volume}}</div>
+    <div>Адрес: {{object.maker}}</div>
+    <div>Описание: {{object.description}}</div>
+    <div>Expired: {{object.expired}}</div>
 
 {% endblock %}
